--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "generate-password": "^1.6.1",
     "joi": "^17.4.1",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "mongoose-type-email": "^1.1.2",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "winston": "^3.3.3"
   }
 }
